--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -133,10 +133,10 @@
             android:text="@string/version"/>
 
         <TextView
+            android:id="@+id/version"
             android:layout_marginTop="10dp"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/version_name"/>
+            android:layout_height="wrap_content"/>
     </LinearLayout>
 
 
