--- a/app/src/main/res/layout/cardview_pedido.xml
+++ b/app/src/main/res/layout/cardview_pedido.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/cvPedido"
     android:layout_width="match_parent"
-    android:layout_height="105dp"
+    android:layout_height="110dp"
     android:layout_margin="2dp"
     android:elevation="2dp"
     card_view:cardCornerRadius="2dp">
@@ -21,7 +21,7 @@
         <FrameLayout
             android:id="@+id/frame"
             android:layout_width="wrap_content"
-            android:layout_height="105dp"
+            android:layout_height="110dp"
             android:background="#ffcc0000">
 
             <LinearLayout
@@ -134,13 +134,14 @@
                             android:text="4800301-8"
                             />
                         <py.com.ideasweb.perseo.ui.elements.MyTextView
-                            android:layout_width="wrap_content"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="5dp"
-
+                            android:lines="1"
+                            android:ellipsize="end"
                             android:layout_marginBottom="5dp"
                             android:textColor="@color/colorPrimaryDark"
-                            android:textSize="@dimen/text_form"
+                            android:textSize="16dp"
                             android:text="Jaime Dario Ferreira Medina "
                             android:id="@+id/cliente"
                             />
@@ -155,6 +156,17 @@
                             android:layout_marginRight="5dp">
 
 
+                            <py.com.ideasweb.perseo.ui.elements.MyTextView
+                                android:id="@+id/anulado"
+                                android:visibility="gone"
+                                android:layout_width="wrap_content"
+                                android:layout_height="match_parent"
+                                android:text="ANULADO"
+                                android:textSize="18dp"
+                                android:textStyle="bold"
+                                android:layout_marginLeft="5dp"
+                                android:gravity="center_vertical"
+                                android:textColor="@color/error"/>
 
                             <py.com.ideasweb.perseo.ui.elements.MyTextView
                                 android:layout_width="wrap_content"
