--- a/app/src/main/res/layout/layout_agregar_articulo.xml
+++ b/app/src/main/res/layout/layout_agregar_articulo.xml
@@ -174,11 +174,12 @@
             app:materialIconSize="42dp"
             android:id="@+id/aa_down"
             android:gravity="center"
+            android:visibility="gone"
             />
 
 
         <EditText
-            android:layout_width="140dp"
+            android:layout_width="160dp"
             android:layout_height="wrap_content"
             android:textSize="40dp"
             android:inputType="numberDecimal"
@@ -187,7 +188,7 @@
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
             android:id="@+id/aa_cantidad"
-            android:text="1"/>
+            android:text=""/>
 
         <net.steamcrafted.materialiconlib.MaterialIconView
             android:layout_width="58dp"
@@ -198,6 +199,7 @@
             app:materialIconSize="42dp"
             android:gravity="center"
             android:id="@+id/aa_up"
+            android:visibility="gone"
             />
 
 
