--- a/app/src/main/res/layout/layout_step1.xml
+++ b/app/src/main/res/layout/layout_step1.xml
@@ -156,6 +156,41 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:orientation="horizontal">
+
+                <net.steamcrafted.materialiconlib.MaterialIconView
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    app:materialIcon="label_outline"
+                    android:textColor="@color/colorAccent"
+                    app:materialIconColor="@color/colorPrimaryDark"
+                    app:materialIconSize="24dp"
+                    android:padding="12dp"
+                    />
+
+                <android.support.design.widget.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="5dp"
+                    android:layout_gravity="center"
+                    android:focusable="false"
+                    >
+
+                    <android.support.design.widget.TextInputEditText
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/regDOC"
+                        android:enabled="false"
+                        android:focusable="false"
+                        android:hint="Nro. Documento"/>
+
+                </android.support.design.widget.TextInputLayout>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:gravity="center"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
