--- a/app/src/main/res/layout/layout_step3.xml
+++ b/app/src/main/res/layout/layout_step3.xml
@@ -26,13 +26,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/step3Cliente"
-                android:textSize="@dimen/subtitle"
+                android:textSize="@dimen/text_form"
                 android:maxLines="2"
                 android:text=""
                 android:ellipsize="end"
                 android:layout_marginTop="@dimen/spacing_tiny"
-                android:layout_marginRight="5dp"
-                android:layout_marginLeft="5dp"
+                android:layout_marginRight="3dp"
+                android:layout_marginLeft="3dp"
                 android:textColor="@color/primary_text"
                 android:gravity="center"/>
 
@@ -75,7 +75,7 @@
                     android:textSize="@dimen/text_form"
                     android:id="@+id/step3Doc"
                     android:textColor="@color/secondary_text"
-                    android:text="RUC: xxxxxxxxx"/>
+                    android:text="Factura: xxxxxxxxx"/>
 
                 <py.com.ideasweb.perseo.ui.elements.MyTextView
                     android:layout_width="wrap_content"
