--- a/app/src/main/res/layout/cardview_factura_log.xml
+++ b/app/src/main/res/layout/cardview_factura_log.xml
@@ -140,7 +140,7 @@
                                 android:textColor="@color/colorAccent"
                                 android:textSize="15dp"
                                 android:textStyle="bold"
-                                android:text="* Pulse para cer los detalles"
+                                android:text="* Pulse para ver los detalles"
                                 android:layout_below="@id/monto"
                                 android:layout_centerInParent="true"
                                 android:layout_marginRight="5dp"
@@ -149,11 +149,6 @@
                         </RelativeLayout>
 
                     </LinearLayout>
-
-
-
-
-
 
 
 
