--- a/app/src/main/res/layout/cardview_pedido.xml
+++ b/app/src/main/res/layout/cardview_pedido.xml
@@ -4,51 +4,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/cvPedido"
     android:layout_width="match_parent"
-    android:layout_height="110dp"
+    android:layout_height="120dp"
     android:layout_margin="2dp"
     android:elevation="2dp"
     card_view:cardCornerRadius="2dp">
-
-    <com.chauthai.swipereveallayout.SwipeRevealLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/swipe_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:dragEdge="left"
-        app:mode="normal">
-
-        <FrameLayout
-            android:id="@+id/frame"
-            android:layout_width="wrap_content"
-            android:layout_height="110dp"
-            android:background="#ffcc0000">
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:layout_width="90dp"
-                    android:layout_height="match_parent"
-                    android:gravity="center"
-                    android:background="@android:color/darker_gray"
-                    android:textColor="@android:color/white"
-                    android:id="@+id/edit_layout"
-                    android:text="Editar" />
-
-                <TextView
-                    android:layout_width="90dp"
-                    android:layout_height="match_parent"
-                    android:gravity="center"
-                    android:background="@android:color/holo_red_dark"
-                    android:textColor="@android:color/white"
-                    android:id="@+id/delete_layout"
-                    android:text="Anular"/>
-            </LinearLayout>
-        </FrameLayout>
-
 
 
         <FrameLayout
@@ -89,7 +48,7 @@
                         android:layout_width="match_parent"
                         android:orientation="vertical"
                         app:layout_heightPercent="100%"
-                        app:layout_widthPercent="85%"
+                        app:layout_widthPercent="100%"
                         android:layout_marginRight="3dp"
                         android:layout_height="match_parent">
 
@@ -171,9 +130,7 @@
                             <py.com.ideasweb.perseo.ui.elements.MyTextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-
                                 android:layout_marginLeft="10dp"
-                                android:layout_alignParentBottom="true"
                                 android:layout_alignParentRight="true"
                                 android:textColor="@color/colorPrimaryDark"
                                 android:textSize="@dimen/text_form"
@@ -182,36 +139,24 @@
                                 android:textStyle="bold"
                                 />
 
+                            <py.com.ideasweb.perseo.ui.elements.MyTextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:textColor="@color/colorAccent"
+                                android:textSize="15dp"
+                                android:textStyle="bold"
+                                android:text="* Pulse para ver los detalles"
+                                android:layout_below="@id/monto"
+                                android:layout_centerInParent="true"
+                                android:layout_marginRight="5dp"
+                                />
+
                         </RelativeLayout>
 
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_marginLeft="10dp"
-                        app:layout_heightPercent="85%"
-                        app:layout_widthPercent="15%"
-                        android:gravity="center"
-                        android:layout_alignParentBottom="true"
-                        android:layout_alignParentRight="true"
-                        >
-
-
-                        <net.steamcrafted.materialiconlib.MaterialIconView
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            app:materialIcon="eye"
-                            android:id="@+id/ver"
-                            app:materialIconSize="24dp"
-                            android:layout_marginTop="5dp"
-                            app:materialIconColor="@color/colorlink"
-                            android:gravity="center"/>
-
-
 
 
                     </LinearLayout>
+
 
                 </android.support.percent.PercentRelativeLayout>
 
@@ -219,5 +164,4 @@
 
             </RelativeLayout>
         </FrameLayout>
-    </com.chauthai.swipereveallayout.SwipeRevealLayout>
 </android.support.v7.widget.CardView>
